--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
       <div class="game-info">
         <div id="day-info">Day 1</div>
         <div id="stats">
-          <div>호감도: <span id="affection">50</span>/100</div>
-          <div>실수 횟수: <span id="mistakes">0</span>/3</div>
+          <div class="stat-item">
+            <div>호감도: <span id="affection">50</span>/100</div>
+            <div class="affection-bar">
+              <div class="affection-fill" id="affection-fill"></div>
+            </div>
+          </div>
+          <div class="stat-item">
+            <div>실수 횟수: <span id="mistakes">0</span>/3</div>
+            <div class="mistakes-bar">
+              <div class="mistakes-fill" id="mistakes-fill"></div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="event-container">
