--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
           <div class="stat-item">
             <div>호감도: <span id="affection">50</span>/100</div>
             <div class="affection-bar">
-              <div class="affection-fill" id="affection-fill"></div>
+              <div
+                class="affection-fill"
+                id="affection-fill"
+                style="width: 50%"
+              ></div>
             </div>
           </div>
           <div class="stat-item">
             <div>실수 횟수: <span id="mistakes">0</span>/3</div>
             <div class="mistakes-bar">
-              <div class="mistakes-fill" id="mistakes-fill"></div>
+              <div
+                class="mistakes-fill"
+                id="mistakes-fill"
+                style="width: 0%"
+              ></div>
             </div>
           </div>
         </div>
